--- a/css/style.css
+++ b/css/style.css
@@ -42,20 +42,22 @@ header {
 }
 header .main-menu {
   list-style: none;
-  justify-content: space-around;
+  justify-content: space-between;
   background: rgba(6, 6, 5, 0.85);
   max-height: 45px;
+  flex-wrap: wrap;
+  padding: 0 48px;
 }
-header .main-menu li {
+header .main-menu a {
   display: inline-block;
   padding-bottom: 6px;
 }
-header .main-menu li a {
+header .main-menu a li {
   color: #ffffff;
   font-size: 26px;
-  padding: 0 52px;
+  padding: 0 45px;
 }
-header .main-menu li a:hover {
+header .main-menu a li:hover {
   background: rgba(220, 220, 220, 0.8);
   color: #121212;
   border-bottom: 6px solid #7dff60;
@@ -65,11 +67,11 @@ main {
 }
 main .main-wrapper {
   background: #e9e9e9;
-  padding: 40px 48px;
   justify-content: space-between;
 }
 main .main-wrapper .left-column {
-  flex-basis: 730px;
+  flex-basis: 784px;
+  margin: 40px 0 40px 48px;
 }
 main .main-wrapper .left-column .heading {
   justify-content: space-between;
@@ -117,10 +119,11 @@ main .main-wrapper .left-column .products .cards {
   justify-content: flex-start;
 }
 main .main-wrapper .left-column .products .cards .card {
-  flex-basis: 142px;
+  padding-right: 21px;
   flex-direction: column;
   align-items: center;
   padding-bottom: 50px;
+  position: relative;
 }
 main .main-wrapper .left-column .products .cards .card p {
   text-align: center;
@@ -147,8 +150,46 @@ main .main-wrapper .left-column .products .cards .card .btn-order {
   font-size: 12px;
   font-family: "Arial", sans-serif;
 }
+main .main-wrapper .left-column .products .cards .card .popuptext {
+  font-family: "Arial", sans-serif;
+  width: 248px;
+  background-color: rgba(0, 0, 0, 0.79);
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 0 20px;
+  position: absolute;
+  z-index: 1;
+  bottom: 84px;
+  left: 20px;
+  margin-left: -80px;
+  color: #d3d3d3;
+}
+main .main-wrapper .left-column .products .cards .card .popuptext h4 {
+  font-size: 14px;
+  font-weight: 700;
+}
+main .main-wrapper .left-column .products .cards .card .popuptext p {
+  font-size: 12px;
+}
+main .main-wrapper .left-column .products .cards .card .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  border-width: 7px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.79) transparent transparent transparent;
+}
+main .main-wrapper .left-column .products a p {
+  color: #444444;
+  text-decoration: underline;
+  font-family: "Arial", sans-serif;
+  text-align: center;
+}
 main .main-wrapper .right-column {
-  flex-basis: 340px;
+  flex-basis: 386px;
+  margin: 40px 48px 40px 0;
 }
 main .main-wrapper .right-column .btn-white {
   text-align: center;
@@ -250,4 +291,90 @@ main .main-wrapper .right-column .loading form .spinner p {
   color: #646464;
   padding-top: 14px;
   margin-bottom: 60px;
+}
+footer {
+  background: url(../img/main-bg.png);
+}
+footer .logo-wrapper {
+  background: #151515;
+}
+footer .logo-wrapper .left-column {
+  flex-basis: 784px;
+  justify-content: space-between;
+  margin: 27px;
+}
+footer .logo-wrapper .left-column a svg {
+  fill: #2b2b2d;
+  width: 45px;
+  height: 41px;
+}
+footer .logo-wrapper .left-column a i {
+  color: #2b2b2d;
+}
+footer .logo-wrapper .left-column a .fa-3x {
+  font-size: 2.6em;
+}
+footer .logo-wrapper .left-column a p {
+  font-size: 32px;
+  color: #444444;
+}
+footer .logo-wrapper .right-column {
+  flex-basis: 386px;
+  justify-content: flex-end;
+  margin: 27px 48px 27px 0;
+}
+footer .logo-wrapper .right-column a p {
+  font-size: 32px;
+  color: #444444;
+}
+footer .nav-wrapper .left-column {
+  flex-basis: 784px;
+  margin: 0 27px;
+}
+footer .nav-wrapper .left-column h2 {
+  color: #444444;
+  font-size: 26px;
+  padding: 27px 0;
+}
+footer .nav-wrapper .left-column ul {
+  text-decoration: none;
+  list-style-type: none;
+  padding-bottom: 13px;
+}
+footer .nav-wrapper .left-column ul li {
+  color: #bbbbbb;
+  padding-bottom: 17px;
+  line-height: 16px;
+}
+footer .nav-wrapper .left-column .info {
+  flex-basis: 285px;
+}
+footer .nav-wrapper .left-column .resources {
+  flex-basis: 285px;
+}
+footer .nav-wrapper .right-column {
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-basis: 386px;
+  margin-right: 48px;
+}
+footer .nav-wrapper .right-column .browsers-logo {
+  justify-content: flex-end;
+  padding-bottom: 22px;
+}
+footer .nav-wrapper .right-column .browsers-logo img {
+  width: 23px;
+  height: 23px;
+  padding: 0 10px;
+  display: inline-block;
+}
+footer .nav-wrapper .right-column .browsers-logo img:last-child {
+  padding-right: 0;
+}
+footer .nav-wrapper .right-column p {
+  color: #5c5c5c;
+  font-size: 14px;
+  font-family: "Arial", sans-serif;
+  text-align: right;
+  padding-bottom: 30px;
 }
